# cmake_template

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  README_dependencies.md  conanfile.py
.github/workflows/: sphinx.yml
cmake/: CPM.cmake  PackageProject.cmake
config/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/doxygen-awesome/: doxygen-awesome-sidebar-only.css  header.html
docs/sphinx/source/: about.rst  api.rst  building.rst  conf.py  contributing.rst  dependencies.rst  docker.rst  index.rst  testing.rst
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt
test/unit/: CMakeLists.txt
